Fixed critical home alignment issue - Recolored text to make it more visible

--- a/app/src/home/Playlists.module.css
+++ b/app/src/home/Playlists.module.css
@@ -7,6 +7,7 @@
   z-index: 1;
   top: 0;
   left: 0;
+  width: 100%;
 }
 
 .container {
@@ -14,7 +15,7 @@
   justify-content: center;
   align-items: center;
   width: 80%;
-  color: #b6b6d9;
+  color: #e4e4f6;
   font-size: 24px;
   flex-direction: column;
   text-align: center;
